# algorithms

./: .gitignore  README.md  pyproject.toml
algorithms/: cryptarithmetic_puzzle.py  knapsack.py  production_optimization.py  transport_optimization.py
tests/: test_mathematical_planning.py
