[tool.poetry]
name = "algorithms"
version = "0.1.0"
description = ""
authors = ["tkhshtsh0917 <48384135+tkhshtsh0917@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
ortools = "^8.1.8487"
numpy = "^1.19.5"
pandas = "^1.2.0"
PuLP = "^2.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-cov = "^2.10.1"
black = "^20.8b1"
isort = "^5.7.0"
pylint = "^2.6.0"
mypy = "^0.790"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
